--- a/src/sections/Welcome/Welcome.css
+++ b/src/sections/Welcome/Welcome.css
@@ -25,6 +25,7 @@
   display: flex;
   justify-content: space-evenly;
   margin-bottom: 20px;
+  color: black;
 }
 .WelcomeButtons button {
   background: none;
